Duty Log Assignment Fixed and Some Extra Attributes added.